--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "start": "svelte-kit preview",
     "validate": "svelte-check",
     "prepare": "husky install",
-    "generate:blog-post": "plop --plopfile ./generators/index.cjs blog-post"
+    "generate:blog-post": "plop --plopfile ./generators/index.cjs blog-post",
+    "cypress:open": "cypress open --browser firefox"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.5.0",
@@ -45,6 +46,7 @@
     "@types/js-cookie": "^3.0.1",
     "autoprefixer": "^10.4.0",
     "cssnano": "^5.0.8",
+    "cypress": "^9.5.1",
     "encoding": "^0.1.13",
     "github-buttons": "^2.19.1",
     "hast-util-heading-rank": "^2.1.0",
