--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@sveltejs/adapter-netlify": "1.0.0-next.42",
     "@sveltejs/kit": "1.0.0-next.240",
     "@tailwindcss/typography": "^0.5.0",
+    "@testing-library/cypress": "^8.0.2",
     "@tsconfig/svelte": "^2.0.1",
     "@types/js-cookie": "^3.0.1",
     "autoprefixer": "^10.4.0",
